fix: make social icons visible with primary cyan color

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -195,8 +195,8 @@ body:hover .visually-hidden button {
 /* social icons*/
 
 .social-icons {
-  .fa {
-    color: #000;
+  .fa, .fas, .fab, .fa-solid {
+    color: #66FCF1;
   }
 
   .fa-bluesky,
